Trying to fix letter spacing

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -166,6 +166,10 @@ footer a:hover {
   margin: 0px;
 }
 
+#homepage-blurb e {
+  letter-spacing: -1px;
+}
+
 #homepage-blurb e:hover {
   color: #fce1a0;
   cursor: auto;
